# MiSS

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  run.sh
MiSS00/: CMakeLists.txt  main.cpp
MiSS00/test/: 00.in  01.in  02.in  03.in  04.in  05.in  06.in
Zad2/: .gitignore  dotest  main.cpp
Zad2/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Zad2/nbproject/private/: configurations.xml
Zad2/test/: 00.in  00.in~  test1~
Zad3/: awc.py  fibadd.py  mixedxor.py  test.py  to01.py  util.py
test/: 01.in  02.in
